== 1.5.9 WhatsApp fork

  * Revert WhatsApp removal

== 1.5.9 (1553) 06-23-2015

  * Albanian translation (Ermal Xhelilaj)
  * Optionally use SMS/MMS read status in backup (#508)
  * No log entries for unknown callers (CLIR) (#532)
  * Support OAuth2 web flow (#554)
  * Rebased K9 to current head (https://github.com/k9mail/k-9/commit/3c1c1e4e5821434375c781503cb64044fef65791)
  * Added optional K9 verbose logging
  * Update and improve French translation (#555)
  * Dismiss "Could Not Connect" notification at next scheduled backup (#562)
  * Removed WhatsApp backup code (#564)

== 1.5.8 (1549) 01-07-2015

  * Fix Android 2.2 compatibility (#515)

== 1.5.7 (1548) 12-29-2014

  * Fix 7bit encoding issue (#512)
  * Fix SSL/TLS trust all stopped working (#513)

== 1.5.6 (1546) 12-22-2014

  * KitKat/Lollipop restore compatibility fixes (#388)
  * Catalan translation (#408)
  * Danish translation (#448)
  * Ukrainian translation (#497)
  * Improved Dutch translation (#461)
  * pay-me 0.0.3
  * whassup with crypt5 support
  * Remove duplicates for call log restoring (#479)
  * New launcher icons (Shimon Simon)
  * Bug fixes (#347 #391 #409 #499)
  * Upgraded k9-mail (https://github.com/jberkel/k-9/tree/sms-backup-plus)

== 1.5.5 (1531) 07-16-2013

  * Fix call logs not getting backed up (#336)
  * Fix battery drainage

== 1.5.4 (1527) 07-08-2013

  * Fixed MMS not getting backed up (#334)
  * Fixed folders getting unnecessarily created  (#333)
  * Fixed contact group id selection
  * Upgraded whassup to 0.0.5
  * Various smaller bugfixes

== 1.5.3 (1525) 07-01-2013

  * Fixed calendar syncing (#260)
  * Fixed call log sync grayed-out option (#308)
  * Fixed loss of a sms/mms or call log if an exception occurs during backup (#270)
  * Added sync log debug mode
  * Added Korean translation (Yunsu Choi)
  * Added Galician translation (Javier Pico)
  * Refactored code + added unit tests

== 1.5.2 (1515) 06-09-2013
