@@ -1,4 +1,8 @@
-SMS Backup+
+Whassup Backup
+Copyright 2015 David Fraser <david@frasergo.org>
+https://github.com/davidfraser/whassup-backup
+
+Original SMS Backup+ code
 Copyright 2010, 2011, 2012, 2013, 2014, 2015 Jan Berkel <jan.berkel@gmail.com>
 https://github.com/jberkel/sms-backup-plus
 
