@@ -1,22 +1,20 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      SMS Backup+ 1.5.9
+      Whassup Backup 1.5.9
     </h2>
     <p>
-      <small>Author: Jan Berkel (and many others, see below)</small>
+      <small>Author: David Fraser</small>
+      <small>Original Author: Jan Berkel (and many others, see below)</small>
     </p>
     <p>
-      Automatically backs up your SMS/MMS and call logs to Gmail or any other
-      IMAP server. Can also restore SMS / call logs after they have been backed up.
+      Automatically backs up your WhatsApp messages to Gmail or any other
+      IMAP server.
     </p>
 
     <h3>New in this release:</h3>
     <ul>
-      <li>Bugfixes</li>
-      <li>Albanian translation</li>
-      <li>Support browser-based XOAuth2</li>
-      <li>WhatsApp backups are no longer supported</li>
+      <li>WhatsApp backups support</li>
     </ul>
 
      <h3>Recent release history</h3>
@@ -27,20 +25,21 @@
     <h3>Information</h3>
     <p>
       Please visit the
-      <a href="https://github.com/jberkel/sms-backup-plus/blob/master/README.md#readme">SMS Backup+
+      <a href="https://github.com/davidfraser/whassup-backup/blob/master/README.md#readme">Whassup Backup
         github</a> page for more information. Also make sure to check the
-      <a href="https://github.com/jberkel/sms-backup-plus/blob/master/README.md#faq">FAQ</a> before
+      <a href="https://github.com/davidfraser/whassup-backup/blob/master/README.md#faq">FAQ</a> before
       reporting a bug.
     </p>
 
 
     <p>See <a
-      href="https://github.com/jberkel/sms-backup-plus/raw/master/CHANGES">changes
+      href="https://github.com/davidfraser/whassup-backup/raw/master/CHANGES">changes
       on github</a> for the full list.</p>
 
     <h3>Thanks</h3>
     <p>Many thanks to:</p>
     <ul>
+      <li> <a href="https://github.com/jberkel">Jan Berkel</a> (the SMS Backup+ author)</li>
       <li> <a href="https://github.com/bjdodson">Ben Dodson</a> (Contacts 2.0 + MMS support) </li>
       <li> <a href="https://github.com/dicer">Felix Knecht</a> Call log backup code </li>
       <li> <a href="http://studer.tv/">Christoph Studer</a>, the original author of SMS Backup </li>
@@ -82,10 +81,10 @@
      <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.
      <ul>
         <li>
-          <a href="https://github.com/jberkel/sms-backup-plus/raw/master/NOTICE">NOTICE</a>
+          <a href="https://github.com/davidfraser/whassup-backup/raw/master/NOTICE">NOTICE</a>
         </li>
         <li>
-          <a href="https://github.com/jberkel/sms-backup-plus/raw/master/COPYING">COPYING</a>
+          <a href="https://github.com/davidfraser/whassup-backup/raw/master/COPYING">COPYING</a>
        </li>
      </ul>
   </body>
