@@ -1,6 +1,7 @@
 == 1.5.9 WhatsApp fork
 
   * Revert WhatsApp removal
+  * Rename to whassup-backup
 
 == 1.5.9 (1553) 06-23-2015
 
